--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<html>
+<HTML>
+    <head>
+        <link rel="stylesheet" href="file1.css" >
+    </head>
+    <body>
+        
+        <div class="srch">
+            <input type="text">
+            
+        </div>
+        <button type="button" id="btn"></button>
+    </body>
+</HTML>
